syntax = "proto3";

package v1.apbv1;

import "v1/apb/anime_video.proto";
import "v1/apb/anime_torrent.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/apb;apbv1";

message AnimeSubDataRequest {
  repeated AnimeVideoRequest   videos   = 1;
  repeated AnimeTorrentRequest torrents = 2;
}

message AnimeDubDataRequest {
  repeated AnimeVideoRequest   videos   = 1;
  repeated AnimeTorrentRequest torrents = 2;
}

message AnimeSubDataResponse {
  repeated AnimeVideoResponse   videos   = 1;
  repeated AnimeTorrentResponse torrents = 2;
}

message AnimeDubDataResponse {
  repeated AnimeVideoResponse   videos   = 1;
  repeated AnimeTorrentResponse torrents = 2;
}